# grocy.openapi.json
@@ -4737,9 +4737,20 @@
 					"description": {
 						"type": "string"
 					},
+					"active": {
+						"type": "integer",
+						"enum": [
+							0,
+							1
+						]
+					},
 					"row_created_timestamp": {
 						"type": "string",
 						"format": "date-time"
+					},
+					"userfields": {
+						"type": "object",
+						"description": "Key/value pairs of userfields"
 					}
 				},
 				"example": {
@@ -4747,7 +4758,9 @@
 					"name": "Deutschland",
 					"iso_code": "DE",
 					"description": null,
-					"row_created_timestamp": "2019-05-02 20:12:25"
+					"active": 1,
+					"row_created_timestamp": "2019-05-02 20:12:25",
+					"userfields": null
 				}
 			},
 			"Quality": {
@@ -4762,16 +4775,29 @@
 					"description": {
 						"type": "string"
 					},
+					"active": {
+						"type": "integer",
+						"enum": [
+							0,
+							1
+						]
+					},
 					"row_created_timestamp": {
 						"type": "string",
 						"format": "date-time"
+					},
+					"userfields": {
+						"type": "object",
+						"description": "Key/value pairs of userfields"
 					}
 				},
 				"example": {
 					"id": "1",
 					"name": "Bio",
 					"description": null,
-					"row_created_timestamp": "2019-05-02 20:12:25"
+					"active": 1,
+					"row_created_timestamp": "2019-05-02 20:12:25",
+					"userfields": null
 				}
 			},
 			"StockLocation": {
