# views/countries.blade.php
@@ -1,0 +1,141 @@
+@php require_frontend_packages(['datatables']); @endphp
+
+@extends('layout.default')
+
+@section('title', $__t('Countries'))
+
+@section('content')
+<div class="row">
+	<div class="col">
+		<div class="title-related-links">
+			<h2 class="title">@yield('title')</h2>
+			<div class="float-right @if($embedded) pr-5 @endif">
+				<button class="btn btn-outline-dark d-md-none mt-2 order-1 order-md-3"
+					type="button"
+					data-toggle="collapse"
+					data-target="#table-filter-row">
+					<i class="fa-solid fa-filter"></i>
+				</button>
+				<button class="btn btn-outline-dark d-md-none mt-2 order-1 order-md-3"
+					type="button"
+					data-toggle="collapse"
+					data-target="#related-links">
+					<i class="fa-solid fa-ellipsis-v"></i>
+				</button>
+			</div>
+			<div class="related-links collapse d-md-flex order-2 width-xs-sm-100"
+				id="related-links">
+				<a class="btn btn-primary responsive-button m-1 mt-md-0 mb-md-0 float-right show-as-dialog-link"
+					href="{{ $U('/country/new?embedded') }}">
+					{{ $__t('Add') }}
+				</a>
+				<a class="btn btn-outline-secondary m-1 mt-md-0 mb-md-0 float-right"
+					href="{{ $U('/userfields?entity=countries') }}">
+					{{ $__t('Configure userfields') }}
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
+
+<hr class="my-2">
+
+<div class="row collapse d-md-flex"
+	id="table-filter-row">
+	<div class="col-12 col-md-6 col-xl-3">
+		<div class="input-group">
+			<div class="input-group-prepend">
+				<span class="input-group-text"><i class="fa-solid fa-search"></i></span>
+			</div>
+			<input type="text"
+				id="search"
+				class="form-control"
+				placeholder="{{ $__t('Search') }}">
+		</div>
+	</div>
+	<div class="col-12 col-md-6 col-xl-3">
+		<div class="form-check custom-control custom-checkbox">
+			<input class="form-check-input custom-control-input"
+				type="checkbox"
+				id="show-disabled">
+			<label class="form-check-label custom-control-label"
+				for="show-disabled">
+				{{ $__t('Show disabled') }}
+			</label>
+		</div>
+	</div>
+	<div class="col">
+		<div class="float-right">
+			<button id="clear-filter-button"
+				class="btn btn-sm btn-outline-info"
+				data-toggle="tooltip"
+				title="{{ $__t('Clear filter') }}">
+				<i class="fa-solid fa-filter-circle-xmark"></i>
+			</button>
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col">
+		<table id="countries-table"
+			class="table table-sm table-striped nowrap w-100">
+			<thead>
+				<tr>
+					<th class="border-right"><a class="text-muted change-table-columns-visibility-button"
+							data-toggle="tooltip"
+							title="{{ $__t('Table options') }}"
+							data-table-selector="#countries-table"
+							href="#"><i class="fa-solid fa-eye"></i></a>
+					</th>
+					<th>{{ $__t('Name') }}</th>
+					<th>{{ $__t('ISO code') }}</th>
+					<th>{{ $__t('Description') }}</th>
+
+					@include('components.userfields_thead', array(
+					'userfields' => $userfields
+					))
+
+				</tr>
+			</thead>
+			<tbody class="d-none">
+				@foreach($countries as $country)
+				<tr class="@if($country->active == 0) text-muted @endif">
+					<td class="fit-content border-right">
+						<a class="btn btn-info btn-sm show-as-dialog-link"
+							href="{{ $U('/country/') }}{{ $country->id }}?embedded"
+							data-toggle="tooltip"
+							title="{{ $__t('Edit this item') }}">
+							<i class="fa-solid fa-edit"></i>
+						</a>
+						<a class="btn btn-danger btn-sm country-delete-button"
+							href="#"
+							data-country-id="{{ $country->id }}"
+							data-country-name="{{ $country->name }}"
+							data-toggle="tooltip"
+							title="{{ $__t('Delete this item') }}">
+							<i class="fa-solid fa-trash"></i>
+						</a>
+					</td>
+					<td>
+						{{ $country->name }}
+					</td>
+					<td>
+						{{ $country->iso_code }}
+					</td>
+					<td>
+						{{ $country->description }}
+					</td>
+
+					@include('components.userfields_tbody', array(
+					'userfields' => $userfields,
+					'userfieldValues' => FindAllObjectsInArrayByPropertyValue($userfieldValues, 'object_id', $country->id)
+					))
+
+				</tr>
+				@endforeach
+			</tbody>
+		</table>
+	</div>
+</div>
+@stop
